Fix font color to be more readable

--- a/sass/color/orange.scss
+++ b/sass/color/orange.scss
@@ -4,6 +4,6 @@
   --accent-alpha-20: rgba(225,117,45,.2);
 
   --background: #141010;
-  --color: rgb(229, 138, 77);
+  --color: rgb(228, 131, 66);
   --border-color: rgba(255, 255, 255, .1);
 }
